# neural-chaos-lab-max

./: .gitignore  CHANGELOG.md  PR_MESSAGE.md  README.md  pyproject.toml  streamlit_app.py
neural_chaos_lab_max/: __init__.py  cli.py  esn.py  neural_ode.py  plotting.py  service.py  systems.py
neural_chaos_lab_max.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_imports.py  test_service.py  test_systems.py
