[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-chaos-lab-max"
version = "0.1.0"
description = "Hybrid chaos forecasting with neural ODEs, ESN, and controls"
readme = "README.md"
authors = [{name="Lord Nibbler"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.0",
  "torch>=2.2.2",
  "torchdiffeq>=0.2.3",
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "plotly>=5.22.0",
  "streamlit>=1.35.0"
]

[project.scripts]
chaoslab = "neural_chaos_lab_max.cli:app"
